--- a/05-HTML-Forms-Tables/forms.html
+++ b/05-HTML-Forms-Tables/forms.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Forms Demo</h1>
+
+    <label for="username">Ender a Username:</label>
+    <input type="username="username">
+    <input type="password" placeholder="password">
+    <input type="color">
+    <input type="number" placeholder="enter a number">
 </body>
 </html>
