--- a/05-HTML-Forms-Tables/forms.html
+++ b/05-HTML-Forms-Tables/forms.html
@@ -8,11 +8,21 @@
 </head>
 <body>
     <h1>Forms Demo</h1>
-
-    <label for="username">Ender a Username:</label>
-    <input type="username="username">
-    <input type="password" placeholder="password">
-    <input type="color">
-    <input type="number" placeholder="enter a number">
+    <p>
+        <label for="username">Ender a Username:</label>
+        <input type="username="username">
+    </p>
+    <p>
+        <label for="password">Enter a Password</label>
+        <input type="password" placeholder="password" id=""password>
+    </p>
+    <p>
+        <label for=""number">Enter a Color: </label>
+        <input type="color" id="color">
+    </p>
+    <p>
+        <label for "number">Ener a Number</label>
+        <input type="number" placeholder="enter a number" id="number">
+    </p>
 </body>
 </html>
