--- a/05-HTML-Forms-Tables/forms.html
+++ b/05-HTML-Forms-Tables/forms.html
@@ -8,21 +8,40 @@
     </head>
     <body>
         <h1>Forms Demo</h1>
+        <button type="button">OUTISIDE FORM</button>
+
+        <form action="/tacos">
+            <button>PLEASE DO NOT SUBMIT THE FORM</button>
         <p>
             <label for="username">Ender a Username:</label>
             <input type="username="username">
         </p>
         <p>
+            <!--Alternative way to label an input (less common)-->
             <label for="password">Enter a Password</label>
             <input type="password" placeholder="password" id=""password>
         </p>
+         
+        <button>IT THE MIDDLE</button>
+        
         <p>
             <label for=""number">Enter a Color: </label>
             <input type="color" id="color">
         </p>
+ <!--Alternative way to label an input (less common)-->
         <p>
             <label for "number">Ener a Number</label>
             <input type="number" placeholder="enter a number" id="number">
         </p>
+        <!--this button doesn't sumbit the form b/c of the "type" attribuite-->
+        <button type="button">Refular button (won't submit)</button>
+        <!--This button submits the form!-->
+        <button>Submit</button>
+        <!--So does this one: -->
+        <input type="submit" value="Click Me!">
+    </form>
+    <hr>
+    <!--Outside of a formm, no default behavior-->
     </body>
+
 </html>
