Not Inside Form

--- a/05-HTML-Forms-Tables/forms.html
+++ b/05-HTML-Forms-Tables/forms.html
@@ -42,7 +42,12 @@
         <input type="submit" value="Click Me!">
     </form>
     <hr>
-    <!--Outside of a formm, no default behavior-->
+    <!--Outside of a formm, no default behavior-->'
+    <button>Not Inside Form</button>
+    <form action="http://www.reddit.com/search">
+        <input type="text" name="query">
+        <button>Search Reddit</button>
+    </form>
     </body>
 
 </html>
