--- a/05-HTML-Forms-Tables/forms.html
+++ b/05-HTML-Forms-Tables/forms.html
@@ -75,6 +75,11 @@
             <label for="cheese">Amount of Cheese</label>
             <input type="range" id=""cheese min="1" max="10" name="cheese_level">
         </p>
+        <p>
+            <label for="requests">Any Special Requests?</label>
+        <br>
+        <textarea name="Requests" id="requests" cols="40" rows="10" placeholder="Type something here"></textarea>
+    </p>
         
         <button>Submit</button>
     </form>
