--- a/05-HTML-Forms-Tables/forms.html
+++ b/05-HTML-Forms-Tables/forms.html
@@ -82,6 +82,13 @@
     </p>
         
         <button>Submit</button>
+    <h2>Validations Demo</h2>
+    <form action="/dummy">
+        <label for="first">Enter First Name</label>
+        <input type="text" name="first" id="first" required>
+        <p><label for="username">Username</label>
+        <input type="text" name="username" id="username" minlength="5" maxlength="20"></p>
+    </form>
     </form>
 
 </body>
