Have to add something

--- a/05-HTML-Forms-Tables/race_registration.html
+++ b/05-HTML-Forms-Tables/race_registration.html
@@ -38,6 +38,10 @@
         <input type="password" name="password" id="password">
     </div>
     <div>
+        <label for="select age group">Select Age Group</label>
+    
+    </div>
+    <div>
         <button>Register</button>
     </div>
 </body>
