--- a/05-HTML-Forms-Tables/race_registration.html
+++ b/05-HTML-Forms-Tables/race_registration.html
@@ -33,13 +33,17 @@
     </div>
     <div>
         <label for="email">Email</label>
-        <input type="email" name="email" id="email" required>
+            <input type="email" name="email" id="email" required>
         <label for="password">Password</label>
         <input type="password" name="password" id="password">
     </div>
     <div>
-        <label for="select age group">Select Age Group</label>
-    
+        <label for="group">Select Age Group</label>
+        <select name="group" id="group">
+        <option value="19">19</option>
+        <option value="20">20</option>
+        <option value="21">21</option>
+    </select>
     </div>
     <div>
         <button>Register</button>
