2. not good css style write

--- a/06-CSS-Basics/index.html
+++ b/06-CSS-Basics/index.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        h2  {
+            color: palevioletred;
+        }
+    </style>
 </head>
 <body>
-    <h1 style="color: purple">Hello World</h1>
-    <button style="background-color: palegreen;>I AM BUTTON</button>
+    <!-- 1. NOT GOOD CSS STYLE (Feat. INLINE STYLE)  -->
+    <!-- <h1 style="color: purple">Hello World</h1> -->
+    <!-- <button style="background-color: palegreen;>I AM BUTTON</button> -->
+
+    <h2>I am an h2</h2>
+    <h2>I am an h2</h2>
+    <h2>I am an h2</h2>
 </body>
 </html>
