How to write CSS style

--- a/06-CSS-Basics/index.html
+++ b/06-CSS-Basics/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <style>
+    <!-- <style>
         h2  {
             color: palevioletred;
         }
-    </style>
+    </style> -->
 </head>
 <body>
     <!-- 1. NOT GOOD CSS STYLE (Feat. INLINE STYLE)  -->
