Button color, p color

--- a/06-CSS-Basics/index.html
+++ b/06-CSS-Basics/index.html
@@ -20,5 +20,8 @@
     <h2>I am an h2</h2>
     <h2>I am an h2</h2>
     <h2>I am an h2</h2>
+    <button>Button 1</button>
+    <button>Button 2</button>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, quam. Modi ducimus commodi nihil aperiam aut placeat assumenda, veritatis error iure obcaecati. Totam suscipit blanditiis adipisci, eius quaerat at tenetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit distinctio asperiores molestiae quas quo laboriosam neque, beatae cumque consequuntur quisquam eveniet dolorem, labore commodi, tempore a at voluptatibus repudiandae amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dolorum voluptatum harum? Voluptatum rem earum expedita distinctio quisquam accusantium corrupti reprehenderit quibusdam vero, accusamus explicabo, minima illo quidem consectetur eos.</p>
 </body>
 </html>
