--- a/07-The-World-of-CSS-Selectors/starter.html
+++ b/07-The-World-of-CSS-Selectors/starter.html
@@ -18,7 +18,7 @@
         <h1>Popular Posts</h1>
         <section>
             <span>Posted by <a href="#213adas">/u/not_funny</a></span>
-            <h2>Lol look at this hilarious meme <span>funny</span></h2>
+            <h2>Lol look at this hilarious meme <span class="tag">funny</span></h2>
             <button>+Vote</button>
             <hr>
         </section>
@@ -30,7 +30,7 @@
         </section>
         <section>
             <span>Posted by <a href="#981adas">/u/dogfan</a></span>
-            <h2>This Corgi got some good stuff from the vet. <span>dogs</span></h2>
+            <h2>This Corgi got some good stuff from the vet. <span class="tag">dogs</span></h2>
             <button>+Vote</button>
             <hr>
         </section>
