--- a/07-The-World-of-CSS-Selectors/starter.html
+++ b/07-The-World-of-CSS-Selectors/starter.html
@@ -54,6 +54,18 @@
             <button>+Vote</button>
             <hr>
         </section>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ea magnam architecto ratione mollitia nostrum, sapiente hic ex quis quod expedita harum? Repudiandae, quam corporis! Autem, itaque. Fugit, veritatis incidunt!        
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ea magnam architecto ratione mollitia nostrum, sapiente hic ex quis quod expedita harum? Repudiandae, quam corporis! Autem, itaque. Fugit, veritatis incidunt!        
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ea magnam architecto ratione mollitia nostrum, sapiente hic ex quis quod expedita harum? Repudiandae, quam corporis! Autem, itaque. Fugit, veritatis incidunt!        
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ea magnam architecto ratione mollitia nostrum, sapiente hic ex quis quod expedita harum? Repudiandae, quam corporis! Autem, itaque. Fugit, veritatis incidunt!        
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ea magnam architecto ratione mollitia nostrum, sapiente hic ex quis quod expedita harum? Repudiandae, quam corporis! Autem, itaque. Fugit, veritatis incidunt!        
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ea magnam architecto ratione mollitia nostrum, sapiente hic ex quis quod expedita harum? Repudiandae, quam corporis! Autem, itaque. Fugit, veritatis incidunt!        
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ea magnam architecto ratione mollitia nostrum, sapiente hic ex quis quod expedita harum? Repudiandae, quam corporis! Autem, itaque. Fugit, veritatis incidunt!        
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ea magnam architecto ratione mollitia nostrum, sapiente hic ex quis quod expedita harum? Repudiandae, quam corporis! Autem, itaque. Fugit, veritatis incidunt!        
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ea magnam architecto ratione mollitia nostrum, sapiente hic ex quis quod expedita harum? Repudiandae, quam corporis! Autem, itaque. Fugit, veritatis incidunt!        
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ea magnam architecto ratione mollitia nostrum, sapiente hic ex quis quod expedita harum? Repudiandae, quam corporis! Autem, itaque. Fugit, veritatis incidunt!        
+
+        </p>
     </main>
     <footer>
         <nav>
