--- a/07-The-World-of-CSS-Selectors/starter.html
+++ b/07-The-World-of-CSS-Selectors/starter.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Selector</title>
     <link rel="stylesheet" href="starter_app.css">
+    <link rel="stylesheet" href="more_stylesheet.css">
 </head>
 <body>
     <nav>
