--- a/08-The-CSS-Box-Model/display.html
+++ b/08-The-CSS-Box-Model/display.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="dispaly.css">
 </head>
 <body>
+    <div></div>
+    <div></div>
+    <div></div>
+
+    <h1>I am h1</h1>
+    <h1>I am also h1</h1>
+    
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit consectetur illo culpa, ab quos dolor soluta sequi fugit unde fugiat magni quae, sunt eveniet! Quae minus reprehenderit eveniet quaerat dolores!
     Exercitationem dolore commodi, sapiente dolorem id quod cupiditate nemo obcaecati nostrum soluta officiis enim numquam quaerat cum corporis quo dolor esse! Eligendi molestias quidem quis voluptas dolores quas adipisci enim.
     Neque quam accusamus et at totam necessitatibus, sed molestiae dolorum commodi aspernatur delectus laudantium provident deleniti voluptate quod consequuntur nisi doloribus eius, a omnis ad odit distinctio, id ratione. Obcaecati.
