--- a/08-The-CSS-Box-Model/unit.html
+++ b/08-The-CSS-Box-Model/unit.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSS Units</title>
+    <link rel="stylesheet" href="unit.css">
 </head>
 <body>
-    
+    <h1>CSS Units</h1>
+    <section>
+        <div>
+        </div>
+    </section>
+    <article>
+        <h2>I am h2</h2>
+        <h3>I am h3</h3>
+        <button>Click me!</button>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A magnam, 
+            ea nulla nostrum ut deserunt neque aspernatur tenetur dolorem distinctio nemo! 
+            Rerum officiis debitis, consequatur provident repudiandae accusamus nisi excepturi!
+            Beatae quisquam cumque, id repudiandae vel aliquid officiis natus minima quo amet
+            veritatis suscipit atque blanditiis dolore. Repudiandae neque doloribus perferendis. Temporibus ratione quis architecto nisi autem omnis perspiciatis aut.</p>
+    </article>
 </body>
 </html>
