--- a/09-Other-Assorted-Useful-CSS-Properties/rgba.html
+++ b/09-Other-Assorted-Useful-CSS-Properties/rgba.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Opacity & Apha</title>
     <link rel="stylesheet" href="rgba.css">
 </head>
 <body>
-    <h1>
-        I am h1
-    </h1>
+    <section>
+        <div id="rgba">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam in dolores sequi blanditiis cumque, neque placeat, libero voluptatum accusamus tenetur maxime debitis? Impedit tenetur ipsum perspiciatis non, natus pariatur sapiente?</div>
+    </section>
+    <section>
+        <div id="opacity">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam in dolores sequi blanditiis cumque, neque placeat, libero voluptatum accusamus tenetur maxime debitis? Impedit tenetur ipsum perspiciatis non, natus pariatur sapiente?
+            <button>I am button!</button>
+        </div>
+
+    </section>
 </body>
 </html>
