--- a/10_Responsive_CSS_Flexbox/flexbox/flexbox.html
+++ b/10_Responsive_CSS_Flexbox/flexbox/flexbox.html
@@ -6,16 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flexbox</title>
     <link rel="stylesheet" href="flexbox.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Let's Play With Flexbox</h1>
 
     <section id="container">
-        <div style="background-color: #f28482"></div>
-        <div style="background-color: #84a59d"></div>
-        <div style="background-color: #f5cac3"></div>
-        <div style="background-color: #f7ede2"></div>
-        <div style="background-color: #f6bd60"></div>
+        <div style="background-color: #ff99c8"></div>
+        <div style="background-color: #fcf6bd"></div>
+        <div style="background-color: #d0f4de"></div>
+        <div style="background-color: #a9def9"></div>
+        <div style="background-color: #e4c1f9"></div>
     </section>
 </body>
 </html>
