--- a/10_Responsive_CSS_Flexbox/flexbox/flexbox.html
+++ b/10_Responsive_CSS_Flexbox/flexbox/flexbox.html
@@ -14,11 +14,11 @@
     <h1>Let's Play With Flexbox</h1>
 
     <section id="container">
-        <div style="background-color: #ff99c8"></div>
-        <div style="background-color: #fcf6bd"></div>
-        <div style="background-color: #d0f4de"></div>
-        <div style="background-color: #a9def9"></div>
-        <div style="background-color: #e4c1f9"></div>
+        <div style="background-color: #ff99c8">H</div>
+        <div style="background-color: #fcf6bd">E</div>
+        <div style="background-color: #d0f4de; height: 300px;">L</div>
+        <div style="background-color: #a9def9">L</div>
+        <div style="background-color: #e4c1f9; height: 450px;">O</div>
     </section>
 </body>
 </html>
