--- a/10_Responsive_CSS_Flexbox/flexbox/flexbox.html
+++ b/10_Responsive_CSS_Flexbox/flexbox/flexbox.html
@@ -18,7 +18,7 @@
         <div style="background-color: #fcf6bd;"></div>
         <div style="background-color: #d0f4de;"></div>
         <div style="background-color: #a9def9;"></div>
-        <div style="background-color: #e4c1f9;">O</div>
+        <div style="background-color: #e4c1f9;"></div>
     </section>
 </body>
 </html>
