--- a/10_Responsive_CSS_Flexbox/flexbox/flexbox/flexbox.html
+++ b/10_Responsive_CSS_Flexbox/flexbox/flexbox/flexbox.html
@@ -20,5 +20,12 @@
         <div style="background-color: #a9def9;"></div>
         <div style="background-color: #e4c1f9;"></div>
     </section>
+
+    <h2>Another Example</h2>
+    <main> 
+        <section class="sidebar"></section>
+        <section class="maincontent"></section>
+        <section class="sidebar"></section>
+    </main>
 </body>
 </html>
