부트스트랩 alert 작성에 대해 공부함

--- a/12_CSS_Franeworks_Boostratp/Basics/basics.html
+++ b/12_CSS_Franeworks_Boostratp/Basics/basics.html
@@ -10,23 +10,45 @@
 </head>
 <body>
     <div class="container-md">
-    <h1>Placeholder</h1>
+    <h1 class="display-1 text-center text-primary">Bootstrap Playholder</h1>
+    <h2 class="display-4">Buttons<span class="badge badge-success badge badge-pill">7</span></h2>
     <button type="button" class="btn btn-primary">Primary</button>
     <button type="button" class="btn btn-success">Success</button>
     <button type="button" class="btn btn-success" disabled>Success Disabled</button>
-    <button type="button" class="btn btn-info">Info</button>
+    <button type="button" clas s="btn btn-info">Info</button>
     <button class="btn btn-outline-warning">Warning Outline</button>
     <button class="btn btn-outline-danger">Danger Outline</button>
     <button class="btn btn-outline-info btn-lg">Info Outline</button>
-    
     <button>Primary</button>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    <button class="btn btn-primary">Updates<span class="badge badge-light">New</span></button>
+    <h3>Button Group</h3>
+    <div class="btn-group">
+        <button class="btn btn-warning">One</button>
+        <button class="btn btn-warning">Two</button>
+        <button class="btn btn-warning">Three</button>
+    </div>
+    <h3>Alert</h3>
+    <div class="alert alert-danger alert-dismissible fade show"> <h4 class="alert">Oh No!</h4>Danger! You are about to end the world as we know it!
+    <button aria-hidden="Close" class="close" data-dismiss="alert">
+        <span aria-hidden="true">&times;</span></button>
+    </div>
+    <h2 class="display-4">Typography</h2>
+    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
         Alias omnis excepturi aliquam ea ut earum officia illum 
         eligendi tempore quam ab dignissimos, enim sit esse doloribus. 
         Facilis animi cum debitis.Lorem ipsum dolor sit amet consectetur adipisicing elit. 
         Alias omnis excepturi aliquam ea ut earum officia illum 
         eligendi tempore quam ab dignissimos, enim sit esse doloribus. 
         Facilis animi cum debitis.</p>
+    <blockquote class="blockquote text-right bg-info"><p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Alias omnis excepturi aliquam ea ut earum officia illum 
+        eligendi tempore quam ab dignissimos, enim sit esse doloribus. 
+        Facilis animi cum debitis.Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Alias omnis excepturi aliquam ea ut earum officia illum 
+        eligendi tempore quam ab dignissimos, enim sit esse doloribus. 
+        Facilis animi cum debitis.</p>
+        <footer class="blockquote-footer">Mr. Lorem Ipsum</footer>
+    </blockquote>
     </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
