--- a/12_CSS_Franeworks_Boostratp/Grid/grid.html
+++ b/12_CSS_Franeworks_Boostratp/Grid/grid.html
@@ -39,8 +39,57 @@
                 <div class="col-8 bg-info">I AM 8 UNITS</div>
             </div>
         </div>
+        <h2 class="display-4">Responsive Grid</h2>
+        <div class="row"> <!--이 행 안에 50:50인 두 요소를 넣을 것이다. -->
+            <div class="col-md-6 col-xl-3 bg-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                Aperiam molestiae sit, tempore unde porro voluptates est fugit.
+                 Reiciendis exercitationem officiis aliquam minus corrupti 
+                 quaerat omnis commodi dolore ipsum consequatur! Rem! Lorem 
+                 ipsum dolor sit amet consectetur adipisicing elit. Doloribus 
+                 doloremque asperiores illo! Quam debitis laudantium 
+                 repudiandae tempora sit! Est quaerat voluptatum beatae 
+                 dolorum quod aliquid eius ad ratione iusto ullam!
+            </div>
+            <div class="col-md-6 col-xl-3 bg-success">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Aperiam molestiae sit, tempore unde porro voluptates est fugit.
+                     Reiciendis exercitationem officiis aliquam minus corrupti 
+                     quaerat omnis commodi dolore ipsum consequatur! Rem! Lorem 
+                     ipsum dolor sit amet consectetur adipisicing elit. Doloribus 
+                     doloremque asperiores illo! Quam debitis laudantium 
+                     repudiandae tempora sit! Est quaerat voluptatum beatae 
+                     dolorum quod aliquid eius ad ratione iusto ullam!
+            </div>
+            <div class="col-md-6 col-xl-3 bg-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                Aperiam molestiae sit, tempore unde porro voluptates est fugit.
+                 Reiciendis exercitationem officiis aliquam minus corrupti 
+                 quaerat omnis commodi dolore ipsum consequatur! Rem! Lorem 
+                 ipsum dolor sit amet consectetur adipisicing elit. Doloribus 
+                 doloremque asperiores illo! Quam debitis laudantium 
+                 repudiandae tempora sit! Est quaerat voluptatum beatae 
+                 dolorum quod aliquid eius ad ratione iusto ullam!
+            </div>
+            <div class="col-md-6 col-xl-3 bg-success">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Aperiam molestiae sit, tempore unde porro voluptates est fugit.
+                     Reiciendis exercitationem officiis aliquam minus corrupti 
+                     quaerat omnis commodi dolore ipsum consequatur! Rem! Lorem 
+                     ipsum dolor sit amet consectetur adipisicing elit. Doloribus 
+                     doloremque asperiores illo! Quam debitis laudantium 
+                     repudiandae tempora sit! Est quaerat voluptatum beatae 
+                     dolorum quod aliquid eius ad ratione iusto ullam!
+            </div>
+        </div>
+    <div class="row"> <!--이미지를 각 열,행 안에 있게한다.-->
+        <div class="col-xl-4"> <!--col을 사용하여 동일한 크기의 열이 되게하거나 최소한 화면 크기에 따라 전혀 바귀지 않도록 한다.-->
+            <img class="img-fluid" src="https://images.unsplash.com/photo-1546146830-2cca9512c68e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1160&q=80" alt="">
+        </div>
+        <div class="col-xl-4">
+            <img class="img-fluid" src="https://images.unsplash.com/photo-1536104968055-4d61aa56f46a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1160&q=80" alt="">
+        </div>
+        <div class="col-xl-4">
+            <img class="img-fluid" src="https://images.unsplash.com/photo-1604964432806-254d07c11f32?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1160&q=80" alt="">
+        </div>
     </div>
-    </div>
+</div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
