그리드 유틸리티

--- a/12_CSS_Franeworks_Boostratp/Grid/grid.html
+++ b/12_CSS_Franeworks_Boostratp/Grid/grid.html
@@ -77,15 +77,67 @@
                      repudiandae tempora sit! Est quaerat voluptatum beatae 
                      dolorum quod aliquid eius ad ratione iusto ullam!
             </div>
+ 
+
+            <h2 class="display-4">Grid Aligment</h2>
+            <div class="row align-items-start"> 
+                <div class="col-md-6 col-xl-3 bg-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Aperiam molestiae sit, tempore unde porro voluptates est fugit.
+                     Reiciendis exercitationem officiis aliquam minus corrupti 
+                     quaerat omnis commodi dolore ipsum consequatur! Rem! Lorem 
+                     ipsum dolor sit amet consectetur adipisicing elit. Doloribus 
+                     doloremque asperiores illo! Quam debitis laudantium 
+                     repudiandae tempora sit! Est quaerat voluptatum beatae 
+                     dolorum quod aliquid eius ad ratione iusto ullam!
+                </div>
+                <div class="col-md-6 col-xl-3 bg-danger">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                        Aperiam molestiae sit, tempore unde porro voluptates est fugit.
+                         Reiciendis exercitationem officiis aliquam minus corrupti 
+                         quaerat omnis commodi dolore ipsum consequatur! Rem! Lorem 
+                         ipsum dolor sit amet consectetur adipisicing elit. Doloribus 
+                         doloremque asperiores illo! Quam debitis laudantium 
+                         repudiandae tempora sit! Est quaerat voluptatum beatae 
+                         dolorum quod aliquid eius ad ratione iusto ullam!
+                </div>
+                <div class="col-md-6 col-xl-3 bg-success">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Aperiam molestiae sit, tempore unde porro voluptates est fugit.
+                     Reiciendis exercitationem officiis aliquam minus corrupti 
+                     quaerat omnis commodi dolore ipsum consequatur! Rem! Lorem 
+                     ipsum dolor sit amet consectetur adipisicing elit. Doloribus 
+                     doloremque asperiores illo! Quam debitis laudantium 
+                     repudiandae tempora sit! Est quaerat voluptatum beatae 
+                     dolorum quod aliquid eius ad ratione iusto ullam!
+                     Doloribus doloremque asperiores illo! Quam debitis laudantium 
+                     repudiandae tempora sit! Est quaerat voluptatum beatae 
+                     dolorum quod aliquid eius ad ratione iusto ullam!
+                </div>
+                <div class="col-md-6 col-xl-3 bg-warning align-self-end">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                        Aperiam molestiae sit, tempore unde porro voluptates est fugit.
+                         Reiciendis exercitationem officiis aliquam minus corrupti 
+                         quaerat omnis commodi dolore ipsum consequatur! Rem! Lorem 
+                         ipsum dolor sit amet consectetur adipisicing elit. Doloribus 
+                         doloremque asperiores illo! Quam debitis laudantium 
+                         repudiandae tempora sit! Est quaerat voluptatum beatae 
+                         dolorum quod aliquid eius ad ratione iusto ullam!
+                </div>
+                <h3>Justify Content</h3>
+                <div class="row border justify-content-center justify-content-lg-start justify-content-xl-between">
+                    <div class="col-4 bg-primary">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem ducimus libero fugiat consequuntur repellat dolore mollitia facilis corrupti culpa. Consectetur corrupti accusantium labore molestias perspiciatis possimus. Ullam eveniet quisquam deleniti.
+                    </div>
+                    <div class="col-4 bg-info">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem ducimus libero fugiat consequuntur repellat dolore mollitia facilis corrupti culpa. Consectetur corrupti accusantium labore molestias perspiciatis possimus. Ullam eveniet quisquam deleniti.
+                    </div>
+                </div>
         </div>
     <div class="row"> <!--이미지를 각 열,행 안에 있게한다.-->
-        <div class="col-xl-4"> <!--col을 사용하여 동일한 크기의 열이 되게하거나 최소한 화면 크기에 따라 전혀 바귀지 않도록 한다.-->
+        <div class="col-xl-4 col-md-6"> <!--col을 사용하여 동일한 크기의 열이 되게하거나 최소한 화면 크기에 따라 전혀 바뀌지 않도록 한다.-->
             <img class="img-fluid" src="https://images.unsplash.com/photo-1546146830-2cca9512c68e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1160&q=80" alt="">
         </div>
-        <div class="col-xl-4">
+        <div class="col-xl-4 col-md-6">
             <img class="img-fluid" src="https://images.unsplash.com/photo-1536104968055-4d61aa56f46a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1160&q=80" alt="">
         </div>
-        <div class="col-xl-4">
+        <div class="col-xl-4 col-md-6">
             <img class="img-fluid" src="https://images.unsplash.com/photo-1604964432806-254d07c11f32?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1160&q=80" alt="">
         </div>
     </div>
