--- a/12_CSS_Franeworks_Boostratp/Utilities/Utilities.html
+++ b/12_CSS_Franeworks_Boostratp/Utilities/Utilities.html
@@ -28,7 +28,7 @@
             <div class="btn btn-primary p-4">Padding 4</div>
             <div class="btn btn-primary p-5">Padding 5</div>
         </div>
-        <div>
+        <div class="my-5">
             <button class="btn btn-primary p-0 pt-5">Padding Top</button>
             <button class="btn btn-primary p-0 pl-5">Padding Left</button>
             <button class="btn btn-primary p-0 pb-5">Padding Bottom</button>
@@ -36,6 +36,8 @@
             <button class="btn btn-primary p-0 px-5">Padding X</button>
             <button class="btn btn-primary p-0 py-5">Padding Y</button>
         </div>
+
+        <button class="btn btn-danger p-0 p-sm-1 p-md-2 p-lg-3 p-xl-5">I change!</button>
     </div>
 
 
